# remo_hackahton

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile-local  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: boot.py  router.py  schemas.py  service.py  settings.py
scripts/: entrypoint.sh
