[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Daniar <daniar@remofirst.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.115.11,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
black = ">=25.1.0,<26.0.0"
autoflake = ">=2.3.1,<3.0.0"
flake8 = ">=7.1.2,<8.0.0"
isort = ">=6.0.1,<7.0.0"
pre-commit = ">=4.1.0,<5.0.0"
urllib3 = ">=2.3.0,<3.0.0"
requests = ">=2.32.3,<3.0.0"
pydantic = ">=2.10.6,<3.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
openai = "0.28.0"
python-multipart = "^0.0.20"
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
